--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
     </div>
 </section>
 
+<div class="overlay" id="feedback">
+    <section class="popup">
+        <span class="close js-close-popup">&times;</span>
+        <header class="popup-header">
+            <h1 class="popup-title">Give us feedback!</h1>
+            <p>Lorem ipsum dolor sit amet, eum posse recteque id, simul nominavi menandri cum ne.</p>
+        </header>
+        <form class="form">
+            <input type="text" name="name" class="form-control" placeholder="Name">
+            <input type="text" name="surname" class="form-control" placeholder="Surname">
+            <textarea class="form-control textarea" placeholder="Enter message"></textarea>
+
+            <input type="submit" class="btn btn-secondary">
+        </form>
+    </section>
+</div>
+
 <script src="js/jquery-3.2.0.min.js"></script>
 <script src="js/swiper/js/swiper.jquery.min.js"></script>
 <script>
@@ -138,9 +155,19 @@
                     $(this).text(Math.ceil(now));
                 }
             });
-
         }
     });
+
+    $(".js-feedback").on('click touchend', function (evt) {
+        evt.preventDefault();
+        evt.stopPropagation();
+
+        $("#feedback").addClass('show');
+    });
+    $(".js-close-popup").on('click touchend', function (evt) {
+        $("#feedback").removeClass('show');
+    });
+
 </script>
 </body>
 </html>
