responsive feedback popup and button hovers

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         }
     });
 
-    $(".js-feedback").on('click touchend', function (evt) {
+    $(".swiper-slide-active .js-feedback").on('click touchend', function (evt) {
         evt.preventDefault();
         evt.stopPropagation();
 
