--- a/index.html
+++ b/index.html
@@ -107,74 +107,93 @@
             <h1 class="popup-title">Give us feedback!</h1>
             <p>Lorem ipsum dolor sit amet, eum posse recteque id, simul nominavi menandri cum ne.</p>
         </header>
-        <form class="form">
+        <form class="form js-form">
             <input type="text" name="name" class="form-control" placeholder="Name">
             <input type="text" name="surname" class="form-control" placeholder="Surname">
             <textarea class="form-control textarea" placeholder="Enter message"></textarea>
 
-            <input type="submit" class="btn btn-secondary">
+            <button type="submit" class="btn btn-secondary js-send">Send</button>
         </form>
     </section>
 </div>
 
+
+<section class='columns flexbox'>
+    <header class="columns-header">
+        <h1 class="columns-title">Flexbox</h1>
+    </header>
+    <article class='column'>
+        <header class='column-header'>
+            <h2 class='column-title'>Here's a column of text</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.
+            Integer euismod sodales ex, sit amet dignissim leo pulvinar non. </p>
+    </article><!--
+    --><article class='column'>
+        <header class='column-header'>
+            <h2 class='column-title'>Here's another column of text</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.</p>
+    </article><!--
+    --><article class='column'>
+        <header class='column-header'>
+            <h2 class='column-title'>Here's the third column</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.
+            Integer euismod sodales ex, sit amet dignissim leo pulvinar non. </p>
+    </article><!--
+    --><article class='column'>
+        <header class='column-header'>
+            <h2 class='column-title'>Here's a fourth column</h2>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.</p>
+    </article>
+</section>
+
+<section class='columns'>
+    <header class="columns-header">
+        <h1 class="columns-title">inline-block</h1>
+    </header>
+    <article class='column inline-block'>
+        <header class='column-header'>
+            <h1 class='column-title'>Here's a column of text</h1>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.
+            Integer euismod sodales ex, sit amet dignissim leo pulvinar non. </p>
+    </article><!--
+    --><article class='column inline-block'>
+        <header class='column-header'>
+            <h1 class='column-title'>Here's another column of text</h1>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.</p>
+    </article><!--
+    --><article class='column inline-block'>
+        <header class='column-header'>
+            <h1 class='column-title'>Here's the third column</h1>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.
+            Integer euismod sodales ex, sit amet dignissim leo pulvinar non. </p>
+    </article><!--
+    --><article class='column inline-block'>
+        <header class='column-header'>
+            <h1 class='column-title'>Here's a fourth column</h1>
+        </header>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin faucibus ullamcorper.
+            Etiam accumsan, diam nec lacinia maximus, ex quam porttitor mi, non tincidunt tellus velit ut turpis.</p>
+    </article>
+</section>
+
+
 <script src="js/jquery-3.2.0.min.js"></script>
 <script src="js/swiper/js/swiper.jquery.min.js"></script>
-<script>
-    const swiper = new Swiper('.swiper-container', {
-        effect: 'coverflow',
-        grabCursor: true,
-        centeredSlides: true,
-        slidesPerView: 'auto',
-        mousewheelControl: true,
-        resizeReInit: true,
-        coverflow: {
-            rotate: 0,
-            stretch: 0,
-            depth: 100,
-            modifier: 1,
-            slideShadows: false
-        },
-        onTap: function (swiper, event) {
-            const $target = $(event.target);
-            if ($target.parents('.item').length > 0 && $target.parents('.swiper-slide-active').length === 0) {
-                swiper.slideTo($target.parents('.item').index());
-            }
-        },
-        onTransitionStart: function (swiper) {
-            const $slide = $(swiper.slides[swiper.realIndex]);
+<script src="js/main.js"></script>
 
-            $('.rating.positive .rating-number').stop(true, true).prop('Counter', 0).animate({
-                Counter: $slide.data('positive')
-            }, {
-                duration: 1000,
-                easing: 'swing',
-                step: function (now) {
-                    $(this).text(Math.ceil(now));
-                }
-            });
-
-            $('.rating.negative .rating-number').stop(true, true).prop('Counter', 0).animate({
-                Counter: $slide.data('negative')
-            }, {
-                duration: 1000,
-                easing: 'swing',
-                step: function (now) {
-                    $(this).text(Math.ceil(now));
-                }
-            });
-        }
-    });
-
-    $(".js-feedback").on('click touchend', function (evt) {
-        evt.preventDefault();
-        evt.stopPropagation();
-        if ($(this).parents('.item').hasClass('swiper-slide-active'))
-            $("#feedback").addClass('show');
-    });
-    $(".js-close-popup").on('click touchend', function (evt) {
-        $("#feedback").removeClass('show');
-    });
-
-</script>
 </body>
 </html>
